# open-dlu

./: README.md  pyproject.toml
configs/: eval.yaml  unlearn.yaml
configs/data/: muse_news.yaml  muse_train.yaml  rwku.yaml  tofu.yaml  tofu_full.yaml  wmdp_bio.yaml  wmdp_bio_mmlu.yaml  wmdp_cyber.yaml
configs/eval/: muse.yaml  rwku.yaml  tofu.yaml  wmdp.yaml  wmdp_cyber.yaml
configs/experiment/finetune/: muse.yaml  tofu.yaml
configs/experiment/unlearn/: muse.yaml  rwku.yaml  tofu.yaml  wmdp.yaml  wmdp_cyber.yaml
configs/model/: dream.yaml  llada.yaml
configs/train/: default.yaml
configs/trainer/: base.yaml  cap.yaml  finetune.yaml  ga.yaml  gd.yaml  npo.yaml  sim_npo.yaml  wga.yaml
src/: __init__.py  eval.py  run.py  train.py
src/component/: __init__.py
src/component/adapter/: __init__.py  base.py  full_model.py  layer_restricted.py
src/component/forget/: __init__.py  base.py  capped.py  grad_ascent.py  npo.py  null.py  sim_npo.py  wga.py
src/component/mask/: __init__.py  base.py  bernoulli.py
src/component/retain/: __init__.py  base.py  ce.py  null.py
src/component/weighting/: __init__.py  base.py  min_snr.py  one_over_t.py
src/data/: __init__.py
src/evals/: __init__.py  base.py
src/evals/metrics/: __init__.py  _text.py  base.py  corpus.py  mcq.py  muse.py  rwku.py  tofu.py
src/generation/: __init__.py  base.py  dream.py  llada.py
src/model/: __init__.py
src/trainer/: config.py  engine.py  pipeline.py
