[project]
name = "open-dlu"
version = "0.0.1"
description = "Open framework for weight-space unlearning in diffusion language models"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.4",
    "hydra-core>=1.3",
]

[project.optional-dependencies]
train = [
    "transformers>=4.46",
    "accelerate",
    "datasets",
    "bitsandbytes",
    "rouge-score",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
